--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="mainNav" style="z-index: 80;">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="./">
             <img src="https://dh2dlbjd2qx17.cloudfront.net/img/tut-logo.png" alt="" width="260" height="80" style="padding: auto;">
@@ -19,7 +19,6 @@
 
             <div class>
                 <ul class="navbar-nav ms-auot">
-                    <!-- <li><img class="user-img" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="user icon" style="position:relative; top: 5px;"></li> -->
                     <li><a class="nav-link" id="sign-in" routerLink="/student-login">Sign in</a></li>
                     <li><a class="nav-link" id="sign-up" routerLink="/student-reg">Sign up</a></li>
                 </ul>
@@ -29,58 +28,52 @@
     </div>
 </nav>
 <!-- Header -->
-<header name="home">
-    <div class="intro-text" style="
-      opacity: 0.9;
-      background: linear-gradient(
-      to right,
-      rgb(0, 0, 0),
-      rgba(255, 0, 0, 0)
-    ); color: white; height: 100%;padding-top:10%;">
+<header name="home" style="display: flex;justify-content: center;align-items: center;">
 
-        <!--Slide Showing-->
+    <div class="container">
+        <div class="box">
 
-        <mdb-carousel style="position:absolute;z-index: -2;height:120%;width:100%;margin-top: -10%;color: rgb(255, 255, 255);" [animation]="'fade'">
-            <!-- Slide 1 -->
-            <mdb-carousel-item style="height:1300px;width:100%;">
-                <img style="object-fit: cover; height:100%;width:100%;" src="../../../assets/img/ori31 (26 of 32).jpg" alt="First slide">
-            </mdb-carousel-item>
-            <!-- Slide 2 -->
-            <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (2 of 16) - Copy.jpg" alt="Second slide">
-            </mdb-carousel-item>
-            <!-- Slide 3 -->
-            <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (16 of 16).jpg" alt="Second slide">
-            </mdb-carousel-item>
-            <!-- Slide 4 -->
-            <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (12 of 16).jpg" alt="Second slide">
-            </mdb-carousel-item>
-            <!-- Slide 5 -->
-            <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (11 of 16).jpg" alt="Second slide">
-            </mdb-carousel-item>
-            <!-- Slide 6 -->
-            <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori31 (25 of 32).jpg" alt="Second slide">
-            </mdb-carousel-item>
+            <div class="title">
+                <span class="block"></span>
+                <h1>TUT Online Orientation<span></span></h1>
+            </div>
 
+            <div class="role">
+                <div class="block"></div>
+                <p>For first time students</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div style="display: flex; justify-content: center;z-index: 40; position: absolute;">
+        <a routerLink="/student-login" (click)="startOr()" style=" justify-content: center;border-radius: 25px; border-width: 20px;" class="myButton">Start Orientation
+        <em class="ml-2" data-feather="arrow-right"></em>
+    </a>
+
+    </div>
+
+    <div class="intro-text">
+        <mdb-carousel [animation]="'fade'" style="z-index: -10;">
+            <mdb-carousel-item style="height:1300px;width:100%">
+                <img style="object-fit: cover;" src="../../assets/img/ori29 (2 of 16) - Copy.jpg" class="d-block w-100 h-100" alt="..." />
+            </mdb-carousel-item>
+            <mdb-carousel-item style="height:1300px;width:100%">
+                <img style="object-fit: cover;" src="../../assets/img/ori29 (12 of 16).jpg" class="d-block w-100 h-100" alt="..." />
+            </mdb-carousel-item>
+            <mdb-carousel-item style="height:1300px;width:100%">
+                <img style="object-fit: cover;" src="../../../assets/img/ori31 (26 of 32).jpg" class="d-block w-100 h-100" alt="..." />
+            </mdb-carousel-item>
+            <mdb-carousel-item style="height:1300px;width:100%">
+                <img style="object-fit: cover;" src="../../assets/img/ori29 (16 of 16).jpg" class="d-block w-100 h-100" alt="..." />
+            </mdb-carousel-item>
+            <mdb-carousel-item style="height:1300px;width:100%">
+                <img style="object-fit: cover;" src="../../assets/img/ori31 (25 of 32).jpg" class="d-block w-100 h-100" alt="..." />
+            </mdb-carousel-item>
+            <mdb-carousel-item style="height:1300px;width:100%">
+                <img style="object-fit: cover;" src="../../assets/img/ori29 (11 of 16).jpg" class="d-block w-100 h-100" alt="..." />
+            </mdb-carousel-item>
         </mdb-carousel>
-
-        <!---->
-        <div>
-
-            <div class="heading" style="text-align: center;line-height: 0.8; display: flex; justify-content: center;font-size: 6vw;  text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);">TUT Online Orientation</div>
-            <p style="text-align: center; display: flex; justify-content: center;font-weight:normal; text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);text-shadow: 5; font-size: 3vw;text-align: center;font-weight: 700;"> for first time entering students.</p>
-        </div>
-        <div style="display: flex; justify-content: center;">
-            <a routerLink="/student-login" (click)="startOr()" style=" justify-content: center;border-radius: 25px; border-width: 20px;" class="myButton">Start Orientation
-            
-            <em class="ml-2" data-feather="arrow-right"></em>
-        </a>
-        </div>
-
     </div>
 </header>
 
