--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
 
 
 
-    <div class="content">
+    <div class="content" *ngIf="loggedin">
         <div class="content__container">
             <ul class="content__container__list">
                 <li class="content__container__list__item">Hi {{loggedin}}</li>
