--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -103,7 +103,7 @@
 
             <!-- STEP 4 WATCH VIDEOS ORIENTATION -->
             <mat-step label="Watch Orientation Videos" [completed]="stepFourComplete">
-                <p>Watch at least 15% of videos to continue</p>
+                <p>Watch at least 15% of videos to continue don't worry you can revisit videos after completing the orientation</p>
 
                 <!---------------------------------------------------------------------------------------------------------->
 
