--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -23,7 +23,7 @@ html {
 }
 
 .container .box {
-    width: 700px;
+    width: 100%;
     height: 950px;
     position: relative;
     display: flex;
