--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -13,18 +13,23 @@
                 <label for="exampleInputEmail1">Student Number</label>
                 <input type="email" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum"
                     required>
-                <small style="color: red;">NB! Your student number will also be your student e-mail<br> it will look like 225489768@tut4life.ac.za</small>
+                <!--<small style="color: red;">NB! Your student number will also be your student e-mail<br> it will look like 225489768@tut4life.ac.za</small>-->
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
-                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
+                <input type="email" onkeypress="return /[a-z ]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Last name</label>
-                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
+                <input type="email" onkeypress="return /[a-z-]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
             </div>
 
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email" name="email" [(ngModel)]="email" required>
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
