--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -58,7 +58,7 @@
 
             <div class="form-group">
                 <label for="exampleInputEmail1">One Time Pin</label>
-                <input type="text" class="form-control" id="otp" aria-describedby="emailHelp" placeholder="Enter OTP" name="otp" [(ngModel)]="otpField" required>
+                <input type="text" maxlength="6" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="otp" aria-describedby="emailHelp" placeholder="Enter OTP" name="otp" [(ngModel)]="otpField" required>
                 <small id="emailHelp" class="form-text text-muted">Do not share the OTP with anyone else.</small>
             </div>
 
